# dantzig

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cargo/: config.toml
.github/workflows/: on-pull-request.yml  release.yml
assets/MPS/: afiro.mps
dantzig/: optimize.py
docs/source/: api_reference.rst  conf.py  index.rst  quick_start.rst
python-source/dantzig/: __init__.py  exceptions.py  model.py  optimize.py
python/dantzig/: __init__.py  model.py
src/: error.rs  io.rs  lib.rs  linalg.rs  linalg2.rs  model.rs  model2.rs  pyobjs.rs  simplex.rs  simplex2.rs
tests/: test_exceptions.py  test_model.py  test_optimize.py
